--- a/index.html
+++ b/index.html
@@ -3,137 +3,175 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <!--    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximun-scale=1.0, minimun-scale=1.0">
-    <title>Document</title>
+    <title>Hubcarts: Your Online Commerce Partners</title>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <link rel="stylesheet" href="css/estilos.css">
     <!--    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">-->
-
 </head>
 <body class="body">
-<header class="header">
-    <div class="container">
-        <figure class="logo" style="margin-left: 67px;">
-            <img src="images/Group 3.png" alt="">
-        </figure>
-        <nav class="menu">
-            <ol>
-                <li><a href="" class="link">INICIO</a></li>
-                <li><a href="" class="link">¿CÓMO FUNCIONA?</a></li>
-                <li><a href="" class="link">PLANES</a></li>
-                <li><a href="" class="link">CONTACTO</a></li>
-            </ol>
-        </nav>
+<header>
+    <img src="images/Group 3.png" alt="">
+    <i class="fas fa-bars burguer-button"></i>
+    <div class="header_items">
+        <a href="#" class="">INICIO</a>
+        <a href="#" class="">COMO FUNCIONA?</a>
+        <a href="#" class="">PLANES</a>
+        <a href="#" class="">CONTACTO</a>
     </div>
+    <nav class="menu_movile">
+        <ol>
+            <a href="#" class="burger_inicio" style="text-decoration: none;"><li>INICIO</li></a>
+            <a href="#" class="burger_func" style="text-decoration: none;"><li>COMO FUNCIONA?</li></a>
+            <a href="#" class="burger_plan" style="text-decoration: none;"><li>PLANES</li></a>
+            <a href="#" class="burger_contact" style="text-decoration: none;"><li>CONTACTO</li></a>
+        </ol>
+    </nav>
 </header>
-
 <section class="hero">
-    <div class="container">
-        <form class="form-email" action="#" style="margin-left: 34px;">
-            <h1 class="form-email-text" style="font-size: 44px; font-family: 'Gill Sans Medium'">CREÁ TU TIENDA <strong style="font-size:72px; font-family: 'Gill Sans Bold'">EN LÍNEA</strong><br>
-                Lorem ipsum dolor sit amet, consectetur adipiscing<br>
-                elit. Nam id metus mauris.</h1>
-            <input type="email" name="direccionemail" placeholder="Tu email"
-                   style="border-radius: 8px; border:none; padding-left: 34px; width: 570px; height: 70px; font-size: 35px;">
-            <button class="button-email">INICIAR</button>
-        </form>
-        <img class="hero-image" src="images/pexels-karolina-grabowska-4968391.png">
+    <div class="hero_container">
+        <div class="hero_container_form">
+            <form class="form-email" action="#" style="margin-left: 34px;">
+                <h1 class="form-email-text" style="font-size: 44px; font-family: 'Gill Sans Medium'">CREÁ TU TIENDA <strong style="font-size:72px; font-family: 'Gill Sans Bold'">EN LÍNEA</strong><br>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing<br>
+                    elit. Nam id metus mauris.</h1>
+                <div class="hero_container_inputs">
+                    <input type="email" name="direccionemail" placeholder="Tu email">
+                    <button class="button-email">INICIAR</button>
+                </div>
+            </form>
+        </div>
+        <div class="hero_container_image">
+            <img class="hero-image" src="images/pexels-karolina-grabowska-4968391.png">
+        </div>
     </div>
 </section>
-
-<section class="hero-slider">
-    <div class="container">
-        <article class="project">
-            <div class="hero-details">
-                <h2 class="content-description">Donec quis <br> lectus vitae eros.</h2>
-                <figure class="imageContainer">
-                    <div>
-                        <img class="hero-silder-img" src="images/Screen%20Shot%202021-02-17%20at%2017.09.47.png">
-<!--                                        <button class="button-img">INICIAR</button>-->
-                        <img class="hero-silder-img" src="images/Screen%20Shot%202021-02-17%20at%2017.10.02.png">
-<!--                                        <button class="button-img">INICIAR</button>-->
-                    </div>
-                </figure>
-            </div>
-        </article>
+<section class="designs">
+    <div class="design_container">
+        <!-- <div class="design_title">
+            <h2 class="design_title_text">Donec quis <br> lectus vitae eros.</h2>
+        </div>
+        <div class="design_slider">
+            <img class="hero-silder-img" src="images/Screen%20Shot%202021-02-17%20at%2017.09.47.png">
+            <img class="hero-silder-img" src="images/Screen%20Shot%202021-02-17%20at%2017.09.47.png">
+        </div> -->
     </div>
 </section>
-
 <section class="hero-coupons">
     <div class="container">
         <h1 class="hero-coupons-title">Donec quis lectus vitae eros.</h1>
         <div class="container-plan">
-
-            <div class="columns">
-                <div class="container-plans">
-                    <ul class="price">
-                        <li class="plan" style="border-top-left-radius: 25px; border-top-right-radius: 25px;">Plan <br> <strong>BÁSICO</strong></li>
-                        <li class="price-tag" style="font-weight: normal"><strong style="font-size: 62px;">$99</strong> /Mensual</li>
-                        <li>- Praesent ut ligula tristique, <br>lobortis eros non, venenatis <br>turpis.</li>
-                        <li>- In tempus neque nec eros <br>eleifend, id rutrum ante <br>consectetur.</li>
-                        <li>- In vel magna feugiat, mi vitae, <br>volutpat orci.</li>
-                        <li class="grey"><a href="#" class="button" style="border-radius: 8px; color: #eac24b; background-color: black">COMPRAR</a></li>
-                        <li class="grey"></li>
-                    </ul>
+            <div class="container_plan_card">
+                <div class="container_plan_price_type">
+                    <h3>Plan</h3>
+                    <h4><strong>BÁSICO</strong></h4>
+                    <strong style="font-size: 62px;">$99</strong> /Mensual
+                </div>
+                <div class="class-container_plan_description">
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                </div>
+                <div class="plans-button">
+                    <a href="#" class="button" style="border-radius: 8px; color: #eac24b; background-color: black">COMPRAR</a>
                 </div>
             </div>
-
-            <div class="columns">
-                <div class="container-plans">
-                <ul class="price" style="background-color: #2c2c2c;">
-                    <li class="plan" style="border-top-left-radius: 25px; border-top-right-radius: 25px; color: white;">Plan <br> BÁSICO</li>
-                    <li class="price-tag" style="background-color: #2c2c2c !important; color: white;"><strong style="font-size: 62px;">$99</strong> /Mensual</li>
-                    <li style="color: white;">- Praesent ut ligula tristique, <br>lobortis eros non, venenatis <br>turpis.</li>
-                    <li style="color: white;">- In tempus neque nec eros <br>eleifend, id rutrum ante <br>consectetur.</li>
-                    <li style="color: white;">- In vel magna feugiat, mi vitae, <br>volutpat orci.</li>
-                    <li class="grey"><a href="#" class="button" style="border-radius: 8px; color: black; background-color: #eac24b">COMPRAR</a></li>
-                    <li class="grey"></li>
-                </ul>
+            <div class="container_plan_card" style="background-color: black !important;">
+                <div class="container_plan_price_type" style="color: white !important;">
+                    <h3>Plan</h3>
+                    <h4><strong>BÁSICO</strong></h4>
+                    <strong style="font-size: 62px;">$99</strong> /Mensual
+                </div>
+                <div class="class-container_plan_description" style="color: white !important;">
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                </div>
+                <div class="plans-button">
+                    <a href="#" class="button" style="border-radius: 8px; color: black; background-color: #edc34d">COMPRAR</a>
                 </div>
             </div>
-
-            <div class="columns">
-                <div class="container-plans">
-                <ul class="price">
-                    <li class="plan" style="border-top-left-radius: 25px; border-top-right-radius: 25px; ">Plan <br> BÁSICO</li>
-                    <li class="price-tag"><strong style="font-size: 62px;">$99</strong> /Mensual</li>
-                    <li>- Praesent ut ligula tristique, <br>lobortis eros non, venenatis <br>turpis.</li>
-                    <li>- In tempus neque nec eros <br>eleifend, id rutrum ante <br>consectetur.</li>
-                    <li>- In vel magna feugiat, mi vitae, <br>volutpat orci.</li>
-                    <li class="grey"><a href="#" class="button" style="border-radius: 8px; color: #eac24b; background-color: black">COMPRAR</a></li>
-                    <li class="grey"></li>
-                </ul>
+            <div class="container_plan_card">
+                <div class="container_plan_price_type">
+                    <h3>Plan</h3>
+                    <h4><strong>BÁSICO</strong></h4>
+                    <strong style="font-size: 62px;">$99</strong> /Mensual
+                </div>
+                <div class="class-container_plan_description">
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                    <p class="class-plan_description">
+                        - Praesent ut ligula tristique,lobortis eros non, venenatis turpis.
+                    </p>
+                </div>
+                <div class="plans-button">
+                    <a href="#" class="button" style="border-radius: 8px; color: #eac24b; background-color: black">COMPRAR</a>
                 </div>
             </div>
         </div>
-        <h1 class="hero-coupons-title">Donec quis lectus vitae eros.</h1>
-        <h2 class="hero-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consequat id ligula tincidunt venenatis. <br>
-        Cras quis nibh at elit interdum tempus ut quis mi. Cras quis sapien accumsan ex scelerisque aliquet <br>
-        non et nisl.</h2>
     </div>
 </section>
+<section class="disclaimer">
+    <div class="disclaimer_container">
+        <div class="disclaimer_title_container">
+            <h1 class="disclaimer_title">Donec quis lectus vitae eros.</h1>
+        </div>
 
+
+
+        <div class="disclaimer_description_container">
+            <p class="disclaimer_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consequat id ligula tincidunt venenatis.
+                Cras quis nibh at elit interdum tempus ut quis mi. Cras quis sapien accumsan ex scelerisque aliquet
+                non et nisl. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consequat id ligula tincidunt venenatis.
+                Cras quis nibh at elit interdum tempus ut quis mi. Cras quis sapien accumsan ex scelerisque aliquet
+                non et nisl.</p>
+        </div>
+
+
+
+    </div>
+</section>
 <footer class="footer">
     <div class="footer_image_container">
         <img src="images/Group 7.png" alt="" srcset="" width="200px">
         <h6 class="footer-text">Lorem ipsum dolor sit amet, <br>
             consectetur adipiscing elitr, sed <br>
-        diam nonumy eirmod tempor</h6>
-
+            diam nonumy eirmod tempor</h6>
         <div class="social">
-            <a href="https://instagram.com"><img alt="" src="images/Group%208.png" width="47px" height="48px" style="margin: 0 5px;"></a>
-            <a href="https://facebook.com"><img alt="" src="images/Group%209.png" width="47px" height="48px" style="margin: 0 5px;"></a>
-            <a href="https://pinterest.com"><img alt="" src="images/Group%2010.png" width="47px" height="48px" style="margin: 0 5px;"></a>
-            <a href="https://snapchat.com"><img alt="" src="images/Group%2011.png" width="47px" height="48px" style="margin: 0 5px;"></a>
+            <a class="instagram_icon" href="https://instagram.com"><img alt="" src="images/Group%208.png" width="47px" height="48px" style="margin: 0 5px;"></a>
+            <a class="facebook_icon" href="https://facebook.com"><img alt="" src="images/Group%209.png" width="47px" height="48px" style="margin: 0 5px;"></a>
+            <a class="pinterest_icon" href="https://pinterest.com"><img alt="" src="images/Group%2010.png" width="47px" height="48px" style="margin: 0 5px;"></a>
+            <a class="snapchat_icon" href="https://snapchat.com"><img alt="" src="images/Group%2011.png" width="47px" height="48px" style="margin: 0 5px;"></a>
         </div>
-
+        <div class="bank_icons_responsive">
+            <a href="https://instagram.com"><img alt="" src="images/Icon%20metro-visa.png" width="44px" height="32px" style="margin: 0 5px;"></a>
+            <a href="https://instagram.com"><img alt="" src="images/Icon%20awesome-cc-mastercard.png" width="44px" height="32px" style="margin: 0 5px;"></a>
+            <a href="https://instagram.com"><img alt="" src="images/Icon%20awesome-cc-paypal.png" width="44px" height="32px" style="margin: 0 5px;"></a>
+            <a href="https://instagram.com"><img alt="" src="images/Icon%20awesome-cc-amex.png" width="44px" height="32px" style="margin: 0 5px;"></a>
+        </div>
         <div class="footer_copyright_container">
             <p class="copyright-text">
                 Lorem ipsum dolor sit amet, consectetur adipscing elit.
             </p>
         </div>
     </div>
-
     <div class="bank_icons">
         <a href="https://instagram.com"><img alt="" src="images/Icon%20metro-visa.png" width="44px" height="32px" style="margin: 0 5px;"></a>
         <a href="https://instagram.com"><img alt="" src="images/Icon%20awesome-cc-mastercard.png" width="44px" height="32px" style="margin: 0 5px;"></a>
@@ -141,7 +179,30 @@
         <a href="https://instagram.com"><img alt="" src="images/Icon%20awesome-cc-amex.png" width="44px" height="32px" style="margin: 0 5px;"></a>
     </div>
 </footer>
+<script>
+    const tablet = window.matchMedia('screen and (max-width: 767px)');
+    const menu_movile = document.querySelector('.menu_movile');
+    const burguerButton = document.querySelector('.burguer-button');
 
+    tablet.addListener(validator);
 
+    function validator(event){
+        if (event.matches){
+            burguerButton.addEventListener('click', hideShow)
+        }else{
+            burguerButton.removeEventListener('click', hideShow)
+        }
+    }
+
+    validator(menu_movile)
+
+    function hideShow(){
+        if(menu_movile.classList.contains('is_active')){
+            menu_movile.classList.remove('is_active');
+        }else{
+            menu_movile.classList.add('is_active');
+        }
+    }
+</script>
 </body>
 </html>
