--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <a href="#" class="button" style="border-radius: 8px; color: #eac24b; background-color: black">COMPRAR</a>
                 </div>
             </div>
-            <div class="container_plan_card" style="background-color: black !important;">
+            <div class="container_plan_card" style="background-color: #2c2c2c !important;">
                 <div class="container_plan_price_type" style="color: white !important;">
                     <h3>Plan</h3>
                     <h4><strong>BÁSICO</strong></h4>
@@ -129,13 +129,10 @@
     </div>
 </section>
 <section class="disclaimer">
-    <div class="disclaimer_container">
         <div class="disclaimer_title_container">
-            <h1 class="disclaimer_title">Donec quis lectus vitae eros.</h1>
+        <h1 class="disclaimer_title">Donec quis lectus vitae eros.</h1>
         </div>
-
-
-
+    <div class="disclaimer_container">
         <div class="disclaimer_description_container">
             <p class="disclaimer_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut consequat id ligula tincidunt venenatis.
                 Cras quis nibh at elit interdum tempus ut quis mi. Cras quis sapien accumsan ex scelerisque aliquet
